Closed Bug 1884012 Opened 2 years ago Closed 2 years ago

gfx/gl/SharedSurface.cpp:80:9: error: unused variable 'gl' [-Werror,-Wunused-variable]

Categories

(Core :: Graphics, defect)

Unspecified
iOS
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

When building with --enable-project=mobile/ios --enable-warnings-as-errors:

 0:04.69 /tmp/gecko-ios/gfx/gl/SharedSurface.cpp:80:9: error: unused variable 'gl' [-Werror,-Wunused-variable]
 0:04.69    80 |   auto& gl = *pGl;
 0:04.69       |         ^~
Pushed by mh@glandium.org: https://hg.mozilla.org/integration/autoland/rev/8a920252c638 Fall back to the warning-silencer case everywhere in SurfaceFactory::Create. r=gfx-reviewers,jgilbert
Status: NEW → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: