Bug 1884012 - Fall back to the warning-silencer case everywhere in SurfaceFactory::Create. r=gfx-reviewers,jgilbert

Differential Revision: https://phabricator.services.mozilla.com/D203839